HW2 perf improvement